welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:16: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:33: error: expected class or object definition
hunt();
^SlugHunting:36: error: Unmatched closing brace '}' ignored here
}
^